[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "logistics-env"
version = "1.0.0"
description = "A Gymnasium-based RL environment for last-mile logistics optimization"
authors = [
    {name = "AI-Copilot"},
]
dependencies = [
    "gymnasium>=0.29.1",
    "numpy>=1.24.0",
    "pydantic>=2.0.0",
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}

[project.optional-dependencies]
server = [
    "fastapi",
    "uvicorn",
]
inference = [
    "huggingface-hub",
    "requests",
    "python-dotenv",
]
all = [
    "logistics-env[server]",
    "logistics-env[inference]",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["logistics_env*"]

[project.scripts]
server = "logistics_env.server.app:app"

dependencies = [
    "gymnasium>=0.29.1",
    "numpy>=1.24.0",
    "pydantic>=2.0.0",
    "openenv>=0.2.0"
]